--- a/css/main.css
+++ b/css/main.css
@@ -17,7 +17,48 @@ html {
   box-sizing: inherit;
 }
 
-h1 {
+body {
+  padding: 0;
+  margin: 0;
+}
+
+header {
+  background-color: #18294f;
+  color: #fff;
+  overflow: hidden;
+  padding-top: 5px;
+  padding-left: 0;
+  padding-right: 0;
+}
+
+header h1 {
+  color: #fff;
+  text-align: center;
+  margin-top: .15em;
+  margin-bottom: 1rem;
+  font-size: 2rem;
+}
+
+nav ul {
+  list-style-type: none;
+  padding: 0;
+  font-size: 1.125rem;
+  margin: 0;
+  padding-left: .25em;
+}
+
+nav a {
+  text-decoration: none;
+  color: #6c8fe0;
+  white-space: nowrap;
+}
+
+li {
+  padding: .5em;
+}
+
+nav a:hover {
+  background-color: #6c8fe0;
   color: #fff;
 }
 
@@ -26,8 +67,21 @@ h1 {
   html {
     font-size: 100%;
     line-height: 1.3;
-  }
+}
 
+h1, p {
+  margin: 0 0 1.3rem;
+}
+
+header {
+  margin: -.5rem;
+}
+
+nav li {
+  float: left;
+  width: 50%;
+  text-align: center;
+}
 }
 
 @media only screen and (min-width: 38em) {
