--- a/css/main.css
+++ b/css/main.css
@@ -67,21 +67,21 @@ nav a:hover {
   html {
     font-size: 100%;
     line-height: 1.3;
-}
+  }
 
-h1, p {
-  margin: 0 0 1.3rem;
-}
+  h1, p {
+    margin: 0 0 1.3rem;
+  }
 
-header {
-  margin: -.5rem;
-}
+  header {
+    margin: -.5rem;
+  }
 
-nav li {
-  float: left;
-  width: 50%;
-  text-align: center;
-}
+  nav li {
+    float: left;
+    width: 50%;
+    text-align: center;
+  }
 }
 
 @media only screen and (min-width: 38em) {
@@ -91,6 +91,14 @@ nav li {
     line-height: 1.4;
   }
 
+  nav li {
+    width: 25%;
+  }
+
+  h1, p {
+    margin: 0 0 1.4rem;
+  }
+
 }
 
 @media only screen and (min-width: 60em) {
@@ -98,6 +106,19 @@ nav li {
   html {
     font-size: 120%;
     line-height: 1.5;
+  }
+
+  h1, p {
+    margin: 0 0 1.5rem;
+  }
+
+  h1 {
+    width: auto;
+    margin-top: .75em;
+  }
+
+  nav ul {
+    float: right;
   }
 
 }
